<resources>
    <string name="app_name">WaterlinePSPNet</string>
    <string name="an_image">an image</string>
    <string name="image_view">Image View</string>
    <string name="segment">预测分割</string>
    <string name="run_model">Running the model...</string>
    <string name="restart">切换图片</string>

    <string name="CHOOSE_PRE_INSTALLED_MODEL_KEY">CHOOSE_PRE_INSTALLED_MODEL_KEY</string>
    <string name="ENABLE_CUSTOM_SETTINGS_KEY">ENABLE_CUSTOM_SETTINGS_KEY</string>
    <string name="MODEL_PATH_KEY">MODEL_PATH_KEY</string>
    <string name="LABEL_PATH_KEY">LABEL_PATH_KEY</string>
    <string name="IMAGE_PATH_KEY">IMAGE_PATH_KEY</string>
    <string name="CPU_THREAD_NUM_KEY">CPU_THREAD_NUM_KEY</string>
    <string name="CPU_POWER_MODE_KEY">CPU_POWER_MODE_KEY</string>
    <string name="INPUT_COLOR_FORMAT_KEY">INPUT_COLOR_FORMAT_KEY</string>
    <string name="INPUT_SHAPE_KEY">INPUT_SHAPE_KEY</string>
    <string name="INPUT_MEAN_KEY">INPUT_MEAN_KEY</string>
    <string name="INPUT_STD_KEY">INPUT_STD_KEY</string>
    <string name="SCORE_THRESHOLD_KEY">SCORE_THRESHOLD_KEY</string>
    <string name="MODEL_PATH_DEFAULT">models/ocr_v2_for_cpu</string>
    <string name="LABEL_PATH_DEFAULT">labels/en_dict.txt</string>
    <string name="IMAGE_PATH_DEFAULT">images/ruler2.jpg</string>
    <string name="CPU_THREAD_NUM_DEFAULT">4</string>
    <string name="CPU_POWER_MODE_DEFAULT">LITE_POWER_HIGH</string>
    <string name="INPUT_COLOR_FORMAT_DEFAULT">BGR</string>
    <string name="INPUT_SHAPE_DEFAULT">1,3,960</string>
    <string name="INPUT_MEAN_DEFAULT">0.485, 0.456, 0.406</string>
    <string name="INPUT_STD_DEFAULT">0.229,0.224,0.225</string>
    <string name="SCORE_THRESHOLD_DEFAULT">0.1</string>
</resources>