<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="模型设置">
        <ListPreference
            android:defaultValue="@string/MODEL_PATH_DEFAULT"
            android:key="@string/CHOOSE_PRE_INSTALLED_MODEL_KEY"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="预训练模型" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/ENABLE_CUSTOM_SETTINGS_KEY"
            android:summaryOff="开启"
            android:summaryOn="关闭"
            android:title="其他设置" />
        <EditTextPreference
            android:defaultValue="true"
            android:key="@string/MODEL_PATH_KEY"
            android:title="模型所在路径" />
        <EditTextPreference
            android:defaultValue="@string/LABEL_PATH_DEFAULT"
            android:key="@string/LABEL_PATH_KEY"
            android:title="字典所在路径" />
        <ListPreference
            android:defaultValue="@string/IMAGE_PATH_DEFAULT"
            android:entries="@array/image_name_entries"
            android:entryValues="@array/image_name_values"
            android:key="@string/IMAGE_PATH_KEY"
            android:title="当前图片" />
    </PreferenceCategory>
    <PreferenceCategory android:title="CPU设置">
        <ListPreference
            android:defaultValue="@string/CPU_THREAD_NUM_DEFAULT"
            android:entries="@array/cpu_thread_num_entries"
            android:entryValues="@array/cpu_thread_num_values"
            android:key="@string/CPU_THREAD_NUM_KEY"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="CPU线程数" />
        <ListPreference
            android:defaultValue="@string/CPU_POWER_MODE_DEFAULT"
            android:entries="@array/cpu_power_mode_entries"
            android:entryValues="@array/cpu_power_mode_values"
            android:key="@string/CPU_POWER_MODE_KEY"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="CPU模式" />
    </PreferenceCategory>
    <PreferenceCategory android:title="输入设置">
        <ListPreference
            android:defaultValue="@string/INPUT_COLOR_FORMAT_DEFAULT"
            android:entries="@array/input_color_format_entries"
            android:entryValues="@array/input_color_format_values"
            android:key="@string/INPUT_COLOR_FORMAT_KEY"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="图片格式：(BGR/RGB)" />
        <EditTextPreference
            android:defaultValue="@string/INPUT_SHAPE_DEFAULT"
            android:key="@string/INPUT_SHAPE_KEY"
            android:title="图片形状: (1,1,max_width_height)/(1,3,max_width_height)" />
        <EditTextPreference
            android:defaultValue="@string/INPUT_MEAN_DEFAULT"
            android:key="@string/INPUT_MEAN_KEY"
            android:title="图片均值: (channel/255-mean)/std" />
        <EditTextPreference
            android:defaultValue="@string/INPUT_STD_DEFAULT"
            android:key="@string/INPUT_STD_KEY"
            android:title="图片方差: (channel/255-mean)/std" />
    </PreferenceCategory>
    <PreferenceCategory android:title="输出设置">
        <EditTextPreference
            android:defaultValue="@string/SCORE_THRESHOLD_DEFAULT"
            android:key="@string/SCORE_THRESHOLD_KEY"
            android:title="Score Threshold" />
    </PreferenceCategory>
</PreferenceScreen>
